Minimal cleanup of OverloadedConnectionsPluginTest